# thesis

./: .gitignore  README.md
ogm_communications/: CMakeLists.txt  package.xml
ogm_communications/msg/: MapPose.msg  MapPublish.msg  MapsMsg.msg
ogm_communications/srv/: GuiRequestEvaluation.srv  GuiRequestStructuralEvaluation.srv  LoadExternalMap.srv  LoadExternalMaps.srv  LoadMapsFromServer.srv  ServerRequestEvaluation.srv  ServerRequestStructuralEvaluation.srv  StructuralEvaluation.srv
ogm_evaluation/: CMakeLists.txt  package.xml
ogm_evaluation/feature_evaluation/: CMakeLists.txt  package.xml
ogm_evaluation/feature_evaluation/include/feature_evaluation/: feature_evaluation.h  feature_metric_factory.h
ogm_evaluation/feature_evaluation/include/feature_evaluation/feature_evaluation_descriptors/: annular_statistics_descriptor.h  circle_intersection_descriptor.h  descriptor_extractor.h  descriptor_factory.h  mean_rays_descriptor.h  radius_statistics_descriptor.h
ogm_evaluation/feature_evaluation/include/feature_evaluation/feature_evaluation_metrics/: feature_metrics.h  metric_base.h  omse.h  parameters.h
ogm_evaluation/feature_evaluation/include/feature_evaluation/feature_evaluation_utils/: affine2DEstimator.h  affine2DPartialEstimator.h  map_utils.h  maps_alignment.h
ogm_evaluation/feature_evaluation/launch/: feature_evaluation.launch
ogm_evaluation/feature_evaluation/src/feature_evaluation/: feature_evaluation.cpp  feature_evaluation_node.cpp  feature_metric_factory.cpp
ogm_evaluation/feature_evaluation/src/feature_evaluation/feature_evaluation_descriptors/: annular_statistics_descriptor.cpp  circle_intersection_descriptor.cpp  descriptor_factory.cpp  mean_rays_descriptor.cpp  radius_statistics_descriptor.cpp
ogm_evaluation/feature_evaluation/src/feature_evaluation/feature_evaluation_metrics/: feature_metrics.cpp  metric_base.cpp  omse.cpp
ogm_evaluation/feature_evaluation/src/feature_evaluation/feature_evaluation_utils/: affine2DEstimator.cpp  affine2DPartialEstimator.cpp  map_utils.cpp  maps_alignment.cpp
ogm_evaluation/include/ogm_evaluation/: ogm_evaluation.h  ogm_metric_factory.h
ogm_evaluation/include/ogm_evaluation/ogm_evaluation_descriptors/: circle_intersection_descriptor.h  descriptor_extractor.h  descriptor_factory.h  mean_rays_descriptor.h  radius_statistics_descriptor.h
ogm_evaluation/include/ogm_evaluation/ogm_evaluation_metrics/: cmse.h  feature_metrics.h  metric_base.h  omse.h  parameters.h
ogm_evaluation/include/ogm_evaluation/ogm_evaluation_utils/: affine2DEstimator.h  map_utils.h  maps_alignment.h
ogm_evaluation/launch/: ogm_evaluation.launch
ogm_evaluation/ogm_evaluation/: CMakeLists.txt  package.xml
ogm_evaluation/src/ogm_evaluation/: ogm_evaluation.cpp  ogm_evaluation_node.cpp  ogm_metric_factory.cpp
ogm_evaluation/src/ogm_evaluation/ogm_evaluation_descriptors/: circle_intersection_descriptor.cpp  descriptor_factory.cpp  mean_rays_descriptor.cpp  radius_statistics_descriptor.cpp
ogm_evaluation/src/ogm_evaluation/ogm_evaluation_metrics/: cmse.cpp  feature_metrics.cpp  metric_base.cpp  omse.cpp
ogm_evaluation/src/ogm_evaluation/ogm_evaluation_utils/: affine2DEstimator.cpp  map_saver.cpp  map_utils.cpp  maps_alignment.cpp
ogm_evaluation/structural_evaluation/: CMakeLists.txt  package.xml
ogm_evaluation/structural_evaluation/launch/: structural_evaluation.launch
ogm_evaluation/structural_evaluation/rviz/: config.rviz
ogm_evaluation/structural_evaluation/src/: alpha_star_search.py  cpp_functions.py  graph_matching.py  graph_utils.py  main.py  map.py  structural_evaluation.py  structural_evaluation_node.py  topological_graph.py  visualization.py  voronoi_diagram.py
ogm_gui/: CMakeLists.txt  package.xml
ogm_gui/include/ogm_gui/: ogm_alignment_connector.h  ogm_alignment_loader.h  ogm_gui_application.h  ogm_gui_connector.h  ogm_gui_controller.h  ogm_gui_loader.h  ogm_map_connector.h  ogm_map_item.h  ogm_map_loader.h  ogm_tools.h  ogm_validation_connector.h  ogm_validation_loader.h
ogm_gui/launch/: ogm_gui.launch
ogm_gui/src/ogm_gui/: ogm_alignment_connector.cpp  ogm_alignment_loader.cpp  ogm_gui_application.cpp  ogm_gui_connector.cpp  ogm_gui_controller.cpp  ogm_gui_loader.cpp  ogm_gui_node.cpp  ogm_map_connector.cpp  ogm_map_item.cpp  ogm_map_loader.cpp  ogm_tools.cpp  ogm_validation_connector.cpp  ogm_validation_loader.cpp
ogm_gui/ui/: alignment.ui  mainWindow.ui  map.ui  validation.ui
ogm_launchers/: CMakeLists.txt  package.xml
ogm_launchers/launch/: produce_map.launch  server_with_map.launch  server_with_map_and_gui.launch  server_with_maps.launch  server_with_maps_and_gui.launch
ogm_msgs/: CMakeLists.txt  package.xml
ogm_msgs/msg/: MapMsg.msg  MapPose.msg
ogm_msgs/srv/: GuiRequestEvaluation.srv  LoadExternalMap.srv  LoadExternalMaps.srv  ServerRequestEvaluation.srv
ogm_resources/: .gitignore  CMakeLists.txt  package.xml
ogm_resources/maps/: ray_sel_1_1.yaml  ray_sel_1_2.yaml  ray_sel_1_3.yaml  ray_sel_2_1.yaml  ray_sel_2_2.yaml  ray_sel_2_3.yaml  ray_sel_3_2.yaml  ray_sel_3_3.yaml  ray_sel_4_1.yaml  ray_sel_4_2.yaml  ray_sel_4_3.yaml  ray_sel_4_4.yaml  slam_env_1.xcf  slam_env_1.yaml  slam_env_2.yaml  slam_env_3.yaml  slam_final_1.yaml  slam_final_2.yaml  slam_final_3.yaml
ogm_server/: CMakeLists.txt  package.xml
ogm_server/include/ogm_server/: map_loader.h  map_server.h  ogm_server.h
ogm_server/scripts/: .gitignore  all_process_results.py  benchmarking.py  maps.yaml  parameters.yaml  parameters_set_creator.py  process_results.py
ogm_server/src/: map_loader.cpp  map_loader_node.cpp  map_server.cpp  ogm_server.cpp  ogm_server_node.cpp
ogm_validator/: CMakeLists.txt  package.xml
