<?xml version="1.0"?>
<package format="2">
  <name>ogm_resources</name>
  <version>0.1.0</version>
  <description>Provides map descripiton files and images for OGM Validator.</description>

  <maintainer email="protopapasmarios@gmail.com">Marios Protopapas</maintainer>

  <license>GPLv3</license>

  <url type="bugtracker">https://github.com/MariosPro/thesis/issues</url>
  <url type="repository">https://github.com/MariosPro/thesis</url>

 <author>Marios Protopapas</author>
 <author>Manos Tsardoulias</author>

 <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
