<?xml version="1.0"?>
<package format="2">
  <name>ogm_server</name>
  <version>0.1.0</version>
  <description>Implements synchronization and coordination functionalities of OGM Validator.</description>

  <maintainer email="protopapasmarios@gmail.com">Marios Protopapas</maintainer>

  <license>GPLv3</license>

  <author>Marios Protopapas</author>
  <author>Manos Tsardoulias</author>

  <url type="bugtracker">https://github.com/MariosPro/thesis/issues</url>
  <url type="repository">https://github.com/MariosPro/thesis</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>ogm_msgs</depend>
  <depend>map_server</depend>

  <export>
  </export>
</package>
