<?xml version="1.0"?>
<package format="2">
  <name>feature_evaluation</name>
  <version>0.1.0</version>
  <description>Implements various methods of feature matching evaluation on Occopancy Grid Maps.</description>

  <maintainer email="protopapasmarios@gmail.com">Marios Protopapas</maintainer>

  <license>GPLv3</license>

  <author>Marios Protopapas</author>
  <author>Manos Tsardoulias</author>

  <url type="bugtracker">https://github.com/MariosPro/thesis/issues</url>
  <url type="repository">https://github.com/MariosPro/thesis</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nav_msgs</depend>
  <depend>ogm_communications</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <export>
  </export>
</package>
