<?xml version="1.0"?>
<package format="2">
  <name>ogm_evaluation</name> <!-- This is a meta package! -->
  <version>0.1.0</version>
  <description>Implements various methods of map evaluation on OGM Validator package.</description>

  <maintainer email="protopapasmarios@gmail.com">Marios Protopapas</maintainer>

  <license>GPLv3</license>

  <author>Marios Protopapas</author>
  <author>Manos Tsardoulias</author>

  <url type="bugtracker">https://github.com/MariosPro/thesis/issues</url>
  <url type="repository">https://github.com/MariosPro/thesis</url>

  <buildtool_depend>catkin</buildtool_depend>
   
  <exec_depend>feature_evaluation</exec_depend>

  <export>
    <metapackage/>
  </export>

 </package>
